ci: run shopify deploy with --force and --no-interactive via npm script separator

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           SHOPIFY_APP_CLIENT_SECRET: ${{ secrets.SHOPIFY_APP_CLIENT_SECRET }}
           SHOPIFY_STORE_URL: ${{ secrets.SHOPIFY_STORE_URL }}
 
-      - name: Deploy Shopify App Extensions
-        run: npm run deploy:shopify
+      - name: Deploy Shopify App Extensions (non-interactive)
+        run: npm run deploy:shopify -- --force --no-interactive
         env:
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
