--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,16 +36,21 @@ jobs:
       - name: Build project (extensions)
         run: npm run build
 
+      - name: Prepare deploy metadata
+        run: echo "DEPLOY_MESSAGE=$(git log -1 --pretty=%s)" >> $GITHUB_ENV
+
       - name: Deploy to Cloudflare Workers
         if: ${{ vars.CF_GIT_INTEGRATION != 'true' }}
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           workingDirectory: '.'
-          command: deploy
+          command: deploy --message "${{ env.DEPLOY_MESSAGE }}"
         env:
           SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
+          DUTCH_FURNITURE_BASE_URL: ${{ vars.DUTCH_FURNITURE_BASE_URL }}
           DUTCH_FURNITURE_API_KEY: ${{ secrets.DUTCH_FURNITURE_API_KEY }}
+          DUTCHNED_API_URL: ${{ vars.DUTCHNED_API_URL }}
           DUTCHNED_API_KEY: ${{ secrets.DUTCHNED_API_KEY }}
           SHOPIFY_APP_CLIENT_SECRET: ${{ secrets.SHOPIFY_APP_CLIENT_SECRET }}
           SHOPIFY_STORE_URL: ${{ secrets.SHOPIFY_STORE_URL }}
