--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,16 +36,13 @@ jobs:
       - name: Build project (extensions)
         run: npm run build
 
-      - name: Prepare deploy metadata
-        run: echo "DEPLOY_MESSAGE=$(git log -1 --pretty=%s)" >> $GITHUB_ENV
-
       - name: Deploy to Cloudflare Workers
         if: ${{ vars.CF_GIT_INTEGRATION != 'true' }}
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           workingDirectory: '.'
-          command: deploy --keep-vars --var DEPLOY_MESSAGE='${{ env.DEPLOY_MESSAGE }}' --var DUTCH_FURNITURE_BASE_URL='${{ vars.DUTCH_FURNITURE_BASE_URL }}' --var DUTCHNED_API_URL='${{ vars.DUTCHNED_API_URL }}'
+          command: deploy --keep-vars
         env:
           SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
           DUTCH_FURNITURE_BASE_URL: ${{ vars.DUTCH_FURNITURE_BASE_URL }}
