--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,14 @@ jobs:
       - name: Build project (extensions)
         run: npm run build
 
+      - name: Inject runtime vars into wrangler.json
+        if: ${{ vars.CF_GIT_INTEGRATION != 'true' }}
+        run: |
+          node -e "const fs=require('fs');const p='build/server/wrangler.json';const j=JSON.parse(fs.readFileSync(p,'utf8'));j.vars=j.vars||{};j.vars.DUTCH_FURNITURE_BASE_URL=process.env.DFB;j.vars.DUTCHNED_API_URL=process.env.DNA;fs.writeFileSync(p,JSON.stringify(j,null,2));console.log('Updated vars in',p);"
+        env:
+          DFB: ${{ vars.DUTCH_FURNITURE_BASE_URL }}
+          DNA: ${{ vars.DUTCHNED_API_URL }}
+
       - name: Deploy to Cloudflare Workers
         if: ${{ vars.CF_GIT_INTEGRATION != 'true' }}
         uses: cloudflare/wrangler-action@v3
@@ -45,9 +53,7 @@ jobs:
           command: deploy --keep-vars
         env:
           SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
-          DUTCH_FURNITURE_BASE_URL: ${{ vars.DUTCH_FURNITURE_BASE_URL }}
           DUTCH_FURNITURE_API_KEY: ${{ secrets.DUTCH_FURNITURE_API_KEY }}
-          DUTCHNED_API_URL: ${{ vars.DUTCHNED_API_URL }}
           DUTCHNED_API_KEY: ${{ secrets.DUTCHNED_API_KEY }}
           SHOPIFY_APP_CLIENT_SECRET: ${{ secrets.SHOPIFY_APP_CLIENT_SECRET }}
           SHOPIFY_STORE_URL: ${{ secrets.SHOPIFY_STORE_URL }}
