--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,9 +1,9 @@
 # Staging configuration for Shopify app
-client_id = "1c7701d2e09d4ede7616f35e13d472ef"
-application_url = "https://woood-staging.leander-4e0.workers.dev"
+client_id = "10a8926387f7ea9e09395b64b1f798c2"
+application_url = "https://woood-production.leander-4e0.workers.dev"
 embedded = true
-name = "woood CF (staging)"
-handle = "woood-2"
+name = "WOOOD"
+handle = "woood"
 
 [access.admin]
 direct_api_mode = "online"
@@ -14,12 +14,12 @@ scopes = "read_products, write_products, write_app_proxy, write_checkouts, write
 use_legacy_install_flow = false
 
 [app_proxy]
-url = "https://woood-staging.leander-4e0.workers.dev/apps/woood"
+url = "https://woood-production.leander-4e0.workers.dev/apps/woood"
 subpath = "woood"
 prefix = "apps"
 
 [auth]
-redirect_urls = ["https://woood-staging.leander-4e0.workers.dev/auth/callback", "https://woood-staging.leander-4e0.workers.dev/auth/shopify/callback", "https://woood-staging.leander-4e0.workers.dev/api/auth/callback"]
+redirect_urls = ["https://woood-production.leander-4e0.workers.dev/auth/callback", "https://woood-staging.leander-4e0.workers.dev/auth/shopify/callback", "https://woood-staging.leander-4e0.workers.dev/api/auth/callback"]
 
 [build]
 automatically_update_urls_on_dev = false
