--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,61 @@
+name: Deploy
+
+on:
+  push:
+    branches:
+      - main
+      - staging
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    env:
+      NODE_VERSION: 22
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build web (React Router)
+        run: npm run build:web
+
+      - name: Build app (Shopify CLI)
+        run: npm run build
+
+      - name: Select production Shopify config (main branch)
+        if: github.ref == 'refs/heads/main'
+        run: |
+          cp shopify.app.prod.toml shopify.app.toml
+
+      - name: Deploy Cloudflare Worker (staging)
+        if: github.ref != 'refs/heads/main'
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          command: deploy --keep-vars
+
+      - name: Deploy Cloudflare Worker (production)
+        if: github.ref == 'refs/heads/main'
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          command: deploy --env production --keep-vars
+
+      # Optional: Deploy Shopify app (uncomment when CI auth is configured)
+      # - name: Deploy Shopify app
+      #   run: npm run deploy:shopify
+      #   env:
+      #     SHOPIFY_FLAG_FORCE: true
+      #     SHOPIFY_CLI_TTY: 0
+      #   if: github.ref == 'refs/heads/main'
+
 name: Deploy WOOOD App
 
 on:
