fix(ts): exclude server-build indirection and avoid tsc checking build/; worker loads built bundle via server-build.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
 		],
 		"verbatimModuleSyntax": true
 	},
-	"exclude": ["build", "**/dist"],
+	"exclude": ["build", "**/dist", "server-build.js"],
 	"include": [
 		"**/*",
 		"**/.server/**/*",
