--- a/extensions/date-picker/tsconfig.json
+++ b/extensions/date-picker/tsconfig.json
@@ -14,6 +14,6 @@
 		"jsx": "react-jsx",
 		"allowSyntheticDefaultImports": true
 	},
-	"include": ["src/**/*"],
+	"include": ["src/**/*", "../../src/worker/handlers"],
 	"exclude": ["node_modules", "dist"]
 }
