ci: unify to cloudflare.yml/shopify.yml; branch env vars; deploy built server config; deprecate legacy workflows

--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -44,7 +44,7 @@ jobs:
   deploy-staging:
     name: Deploy (Staging)
     needs: build
-    if: ${{ github.ref == format('refs/heads/{0}', env.BRANCH_STAGING) && vars.CF_GIT_INTEGRATION != 'true' }}
+    if: ${{ github.ref == format('refs/heads/{0}', (vars.BRANCH_STAGING || 'staging')) && vars.CF_GIT_INTEGRATION != 'true' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -67,7 +67,7 @@ jobs:
   deploy-production:
     name: Deploy (Production)
     needs: build
-    if: ${{ github.ref == format('refs/heads/{0}', env.BRANCH_PRODUCTION) && vars.CF_GIT_INTEGRATION != 'true' }}
+    if: ${{ github.ref == format('refs/heads/{0}', (vars.BRANCH_PRODUCTION || 'production')) && vars.CF_GIT_INTEGRATION != 'true' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
