--- a/.github/workflows/shopify.yml
+++ b/.github/workflows/shopify.yml
@@ -45,7 +45,7 @@ jobs:
   deploy-staging:
     name: Deploy (Staging)
     needs: build
-    if: ${{ github.ref == format('refs/heads/{0}', env.BRANCH_STAGING) }}
+    if: ${{ github.ref == format('refs/heads/{0}', (vars.BRANCH_STAGING || 'staging')) }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
@@ -68,7 +68,7 @@ jobs:
   deploy-production:
     name: Deploy (Production)
     needs: build
-    if: ${{ github.ref == format('refs/heads/{0}', env.BRANCH_PRODUCTION) }}
+    if: ${{ github.ref == format('refs/heads/{0}', (vars.BRANCH_PRODUCTION || 'production')) }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
