ci: use Node 20.19.4 on runners; relax engines to >=20 to avoid EBADENGINE; keep npm >=9.6.4

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
 		"@rollup/rollup-linux-x64-gnu": "^4.21.0"
 	},
 	"engines": {
-		"node": "^22.14.0",
+		"node": ">=20.0.0",
 		"npm": ">=9.6.4"
 	},
 	"packageManager": "npm@10.0.0",
