--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,29 @@
-name: Deploy WOOOD App
+name: Deploy
 
 on:
   push:
-    branches: [WOOOD-integration, main]
-  pull_request:
-    branches: [WOOOD-integration, main]
+    branches:
+      - '**'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    name: Deploy
+    env:
+      NODE_VERSION: 22
+      ACT: ${{ env.ACT }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Use Node ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: 'npm'
-
-      - name: Remove yarn files
-        run: rm -f yarn.lock yarn-error.log .yarnrc .yarnrc.yml
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install dependencies
         run: npm ci
-        env:
-          NPM_CONFIG_ENGINE_STRICT: true
-          NPM_CONFIG_FUND: false
-          NPM_CONFIG_PROGRESS: false
 
-      - name: Build web (ensures build/server/wrangler.json exists)
-        run: npm run build:web
-
-      - name: Build project (extensions)
+      - name: Build app (single step: web + extensions)
         run: npm run build
 
       - name: Inject runtime vars into wrangler.json
@@ -44,21 +34,33 @@ jobs:
           DFB: ${{ vars.DUTCH_FURNITURE_BASE_URL }}
           DNA: ${{ vars.DUTCHNED_API_URL }}
 
-      - name: Deploy to Cloudflare Workers
-        if: ${{ vars.CF_GIT_INTEGRATION != 'true' }}
+      - name: Deploy Cloudflare Worker (staging)
+        if: github.ref == 'refs/heads/staging' && env.ACT != 'true'
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          workingDirectory: '.'
-          command: deploy --keep-vars
-        env:
-          SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
-          DUTCH_FURNITURE_API_KEY: ${{ secrets.DUTCH_FURNITURE_API_KEY }}
-          DUTCHNED_API_KEY: ${{ secrets.DUTCHNED_API_KEY }}
-          SHOPIFY_APP_CLIENT_SECRET: ${{ secrets.SHOPIFY_APP_CLIENT_SECRET }}
-          SHOPIFY_STORE_URL: ${{ secrets.SHOPIFY_STORE_URL }}
+          command: deploy -c wrangler.json --keep-vars
 
-      - name: Deploy Shopify App Extensions (non-interactive)
-        run: npm run deploy:shopify -- --force
-        env:
-          SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
+      - name: Deploy Cloudflare Worker (production)
+        if: github.ref == 'refs/heads/production' && env.ACT != 'true'
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          command: deploy -c wrangler.production.json --keep-vars
+
+      - name: Simulate deploy with wrangler (act)
+        if: env.ACT == 'true'
+        run: |
+          npm ci
+          npm run build
+          npx wrangler deploy -c wrangler.json --dry-run --outdir .wrangler-dryrun
+
+      # Optional: Deploy Shopify app (uncomment when CI auth is configured)
+      # - name: Deploy Shopify app
+      #   run: npm run deploy:shopify
+      #   env:
+      #     SHOPIFY_FLAG_FORCE: true
+      #     SHOPIFY_CLI_TTY: 0
+      #   if: github.ref == 'refs/heads/main'
+
+  # Removed duplicate legacy deploy stanza
