--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
 	"type": "module",
 	"scripts": {
 		"build": "shopify app build",
-		"build:web": "react-router build",
 		"check": "concurrently 'npm:check:*'",
 		"check:actions": "if command -v actionlint 2>&1 >/dev/null; then actionlint; fi",
-		"check:code": "(biome check --write || echo 'Biome not available, skipping code check')",
+		"check:code": "biome check --write",
 		"check:spell": "if command -v cspell 2>&1 >/dev/null; then cspell --gitignore --quiet .; fi",
 		"check:types": "tsc",
 		"clean": "rm -rf .{react-router,shopify,wrangler} build node_modules/.{cache,mf,tmp,vite,vite-temp} && find . -type d -name __screenshots__ -exec rm -rf {} \\;",
 		"deploy": "concurrently 'npm:deploy:*'",
-		"deploy:cloudflare": "wrangler deploy -c build/server/wrangler.json --keep-vars",
+		"deploy:cloudflare": "wrangler deploy",
 		"deploy:shopify": "shopify app deploy --message=$(git rev-parse --abbrev-ref HEAD):$npm_package_version --version=$(git rev-parse HEAD)",
 		"dev": "shopify app dev --localhost-port=8080 --use-localhost",
 		"dev:tunnel": "source .env && shopify app dev --tunnel-url=${SHOPIFY_APP_URL}:${PORT:-8080}",
@@ -21,7 +20,7 @@
 		"gen:code": "graphql-codegen --errors-only",
 		"gen:types": "wrangler types && react-router typegen",
 		"postinstall": "patch-package",
-		"prepare": "if [ \"$CI\" = \"true\" ]; then exit 0; fi; test \"$NODE_ENV\" = \"production\" && exit 0 || (mkdir -p ./app/i18n/en && cp node_modules/@shopify/polaris/locales/en.json ./app/i18n/en/polaris.json && (npm run check:code || true))",
+		"prepare": "[[ $NODE_ENV = 'production' ]] && exit 0; cp node_modules/@shopify/polaris/locales/en.json ./app/i18n/en/polaris.json && biome check --write ./app/i18n/en/polaris.json",
 		"start": "wrangler dev",
 		"test": "vitest --run",
 		"test:e2e": "node --env-file=.env --env-file=.env.test $(npm root)/.bin/playwright test",
