--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -29,6 +29,8 @@ jobs:
       - run: npm run build --ignore-scripts
         env:
           SHOPIFY_API_KEY: ${{ vars.SHOPIFY_API_KEY }}
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps webkit
       - run: npm test
       - uses: actions/upload-artifact@v4
         with:
