--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -26,12 +26,9 @@ jobs:
           node-version-file: "package.json"
           cache: "npm"
       - run: npm ci
-      - run: npm run gen
-      - run: npm run build:web
+      - run: npm run build --ignore-scripts
         env:
           SHOPIFY_API_KEY: ${{ vars.SHOPIFY_API_KEY }}
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps webkit
       - run: npm test
       - uses: actions/upload-artifact@v4
         with:
