--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
 	"name": "@Webfluencer-B-V/WOOOD_app",
-	"version": "2.9.25",
+	"version": "3.0.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "react-router build && shopify app build",
-		"build:web": "react-router build",
+		"build": "shopify app build",
 		"check": "concurrently 'npm:check:*'",
 		"check:actions": "if command -v actionlint 2>&1 >/dev/null; then actionlint; fi",
-		"check:code": "(biome check --write || echo 'Biome not available, skipping code check')",
+		"check:code": "biome check --write",
 		"check:spell": "if command -v cspell 2>&1 >/dev/null; then cspell --gitignore --quiet .; fi",
 		"check:types": "tsc",
 		"clean": "rm -rf .{react-router,shopify,wrangler} build node_modules/.{cache,mf,tmp,vite,vite-temp} && find . -type d -name __screenshots__ -exec rm -rf {} \\;",
@@ -21,7 +20,7 @@
 		"gen:code": "graphql-codegen --errors-only",
 		"gen:types": "wrangler types && react-router typegen",
 		"postinstall": "patch-package",
-		"prepare": "if [ \"$CI\" = \"true\" ]; then exit 0; fi; test \"$NODE_ENV\" = \"production\" && exit 0 || (mkdir -p ./app/i18n/en && cp node_modules/@shopify/polaris/locales/en.json ./app/i18n/en/polaris.json && (npm run check:code || true))",
+		"prepare": "[[ $NODE_ENV = 'production' ]] && exit 0; cp node_modules/@shopify/polaris/locales/en.json ./app/i18n/en/polaris.json && biome check --write ./app/i18n/en/polaris.json",
 		"start": "wrangler dev",
 		"test": "vitest --run",
 		"test:e2e": "node --env-file=.env --env-file=.env.test $(npm root)/.bin/playwright test",
@@ -53,8 +52,6 @@
 		"@types/react": "19.1.9",
 		"@types/react-dom": "19.1.7",
 		"@vitest/browser": "3.2.4",
-		"@vitest/runner": "3.2.4",
-		"@vitest/snapshot": "3.2.4",
 		"concurrently": "9.2.0",
 		"happy-dom": "18.0.1",
 		"playwright": "1.54.2",
@@ -67,21 +64,13 @@
 		"wrangler": "4.28.1"
 	},
 	"optionalDependencies": {
-		"@rollup/rollup-linux-x64-gnu": "4.46.2",
 		"@shopify/cli": "3.83.3"
 	},
 	"engines": {
 		"node": "^22.14.0",
 		"npm": ">=9.6.4"
 	},
-	"packageManager": "npm@10.0.0",
 	"bin": {
-		"WOOOD": "./bin.sh"
-	},
-	"resolutions": {
-		"react": "19.1.1",
-		"react-dom": "19.1.1",
-		"@types/react": "19.1.9",
-		"@types/react-dom": "19.1.7"
+		"shopflare": "./bin.sh"
 	}
 }
